# smtp_forward

./: Cargo.toml
.github/workflows/: builder.yaml
src/: lib.rs  main.rs  schema.rs  smtp.rs
